# Image-Processing

./: README.md
ComputerVision/: ComputerVision.sln
ComputerVision/coursework/: CMakeLists.txt  coursework.cpp  coursework.vcxproj
ComputerVision/coursework/x64/Debug/: coursework.exe.recipe  coursework.ilk  coursework.vcxproj.FileListAbsolute.txt  vc143.idb
ComputerVision/coursework/x64/Debug/coursework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  coursework.lastbuildstate  coursework.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputerVision/lab_04/: CMakeLists.txt  lab04.md  lab04_0.json  lab04_1.json  lab04_2.json  lab04_3.json  lab04_4.json  lab04_5.json  lab_04.cpp
ComputerVision/lab_05/: CMakeLists.txt  lab05.md  lab_05.cpp
ComputerVision/lab_06/: CMakeLists.txt  lab_06.cpp
ComputerVision/lab_07/: CMakeLists.txt
ComputerVision/lab_1/: CMakeLists.txt  lab_1.cpp  lab_1.vcxproj
ComputerVision/lab_1/x64/Debug/: lab_1.exe.recipe  lab_1.ilk  lab_1.vcxproj.FileListAbsolute.txt  vc143.idb
ComputerVision/lab_1/x64/Debug/lab_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputerVision/lab_2/: CMakeLists.txt  imageGenerator.cpp  imageGenerator.h  lab_2.cpp  lab_2.vcxproj  lab_2.vcxproj.filters
ComputerVision/lab_2/x64/Debug/: lab_2.exe.recipe  lab_2.ilk  lab_2.vcxproj.FileListAbsolute.txt  vc143.idb
ComputerVision/lab_2/x64/Debug/lab_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ComputerVision/lab_3/: CMakeLists.txt  lab_3.cpp  lab_3.vcxproj
ComputerVision/lab_3/x64/Debug/: lab_3.exe.recipe  lab_3.ilk  lab_3.vcxproj.FileListAbsolute.txt  vc143.idb
ComputerVision/lab_3/x64/Debug/lab_3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab_3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+2 files in other folders)
